tests/my/bad/bad004.lat
int main() {
  boolean [] v = new string [1];
  printInt(v.length);
  return 0;
}
